--- a/package.json
+++ b/package.json
@@ -1,26 +1,61 @@
 {
-  "name": "vite-tp",
-  "version": "1.0.0",
-  "description": "vite vue3模版",
-  "main": "index.js",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/dswlol/vite-tp.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/dswlol/vite-tp/issues"
-  },
-  "homepage": "https://github.com/dswlol/vite-tp#readme",
-  "devDependencies": {
-    "@vitejs/plugin-legacy": "^4.0.4",
-    "vite": "^4.3.9"
-  }
+	"name": "vite-tp",
+	"version": "1.0.0",
+	"description": "vite vue3模版",
+	"main": "index.js",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview",
+		"lint": "eslint --ext .ts,.js,.jsx,.vue .",
+		"lint:fix": "eslint --fix --ext .ts,.js,.jsx,.vue ."
+	},
+	"engines": {
+		"node": ">=v18.16.0"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/dswlol/vite-tp.git"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/dswlol/vite-tp/issues"
+	},
+	"homepage": "https://github.com/dswlol/vite-tp#readme",
+	"devDependencies": {
+		"@intlify/unplugin-vue-i18n": "^0.11.0",
+		"@types/node": "^20.3.1",
+		"@typescript-eslint/parser": "^5.59.11",
+		"@unocss/eslint-config": "^0.53.1",
+		"@vitejs/plugin-legacy": "^4.0.4",
+		"@vitejs/plugin-vue": "^4.2.3",
+		"@vitejs/plugin-vue-jsx": "^3.0.1",
+		"@vueuse/components": "^10.2.0",
+		"@vueuse/core": "^10.2.0",
+		"@vueuse/integrations": "^10.2.0",
+		"eslint": "^8.43.0",
+		"eslint-config-prettier": "^8.8.0",
+		"eslint-plugin-prettier": "^4.2.1",
+		"eslint-plugin-vue": "^9.14.1",
+		"local-pkg": "^0.4.3",
+		"nprogress": "^0.2.0",
+		"prettier": "^2.8.8",
+		"typescript": "^5.1.3",
+		"unplugin-auto-import": "^0.16.4",
+		"unplugin-vue-components": "^0.25.1",
+		"unplugin-vue-router": "^0.6.4",
+		"vite": "^4.3.9",
+		"vite-auto-import-resolvers": "^3.1.0",
+		"vite-plugin-compression": "^0.5.1",
+		"vite-plugin-env-types": "^0.1.3",
+		"vite-plugin-removelog": "^0.2.1",
+		"vite-plugin-use-modules": "^1.4.5",
+		"vite-plugin-vue-devtools": "^0.2.1",
+		"vite-plugin-warmup": "^0.1.0",
+		"vue": "^3.3.4",
+		"vue-i18n": "^9.2.2",
+		"vue-router": "^4.2.2"
+	}
 }
