--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
 		"@types/node": "^20.3.1",
 		"@typescript-eslint/parser": "^5.59.11",
 		"@unocss/eslint-config": "^0.53.1",
+		"@unocss/reset": "^0.53.1",
+		"@unocss/transformer-directives": "^0.53.1",
 		"@vitejs/plugin-legacy": "^4.0.4",
 		"@vitejs/plugin-vue": "^4.2.3",
 		"@vitejs/plugin-vue-jsx": "^3.0.1",
@@ -47,8 +49,11 @@
 		"lint-staged": "^13.2.2",
 		"local-pkg": "^0.4.3",
 		"nprogress": "^0.2.0",
+		"pinia": "^2.1.4",
+		"pinia-plugin-persistedstate": "^3.1.0",
 		"prettier": "^2.8.8",
 		"typescript": "^5.1.3",
+		"unocss": "^0.53.1",
 		"unplugin-auto-import": "^0.16.4",
 		"unplugin-vue-components": "^0.25.1",
 		"unplugin-vue-router": "^0.6.4",
