--- a/package.json
+++ b/package.json
@@ -61,9 +61,11 @@
 		"vite-auto-import-resolvers": "^3.1.0",
 		"vite-plugin-compression": "^0.5.1",
 		"vite-plugin-env-types": "^0.1.3",
+		"vite-plugin-pages": "^0.31.0",
 		"vite-plugin-removelog": "^0.2.1",
 		"vite-plugin-use-modules": "^1.4.5",
 		"vite-plugin-vue-devtools": "^0.2.1",
+		"vite-plugin-vue-meta-layouts": "^0.2.2",
 		"vite-plugin-warmup": "^0.1.0",
 		"vue": "^3.3.4",
 		"vue-i18n": "^9.2.2",
