--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
 		"types": [
 			"vite-plugin-use-modules/client",
 			"@intlify/unplugin-vue-i18n/messages",
+			"vite-plugin-vue-meta-layouts/client",
 			"node"
 		]
 	},
